refactor: Change css definition for book cover not found and remove option value none inside the select tag

--- a/src/App.css
+++ b/src/App.css
@@ -170,7 +170,7 @@ body, .app {
   background-size: 100% 100%;
 }
 
-book-cover, .not-found {
+.book-cover.not-found {
   background-image: url('./icons/image_not_found.svg');
 }
 
