--- a/src/App.css
+++ b/src/App.css
@@ -147,13 +147,25 @@ body, .app {
   width: 40px;
   height: 40px;
   border-radius: 50%;
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+}
+
+.book-shelf-changer.moving {
   background: #60ac5d;
   background-image: url('./icons/arrow-drop-down.svg');
   background-repeat: no-repeat;
   background-position: center;
   background-size: 20px;
-  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 }
+
+.book-shelf-changer.searching {
+  background: #af4fff;
+  background-image: url('./icons/arrow-drop-down.svg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 20px;
+}
+
 .book-shelf-changer select {
   width: 100%;
   height: 100%;
